set(SOURCES
        AddToLineupDialog.cpp
        AdvancedAnimSheet.cpp
        AggregateNameDialog.cpp
        AmbientLightDialog.cpp
        AnimMixingPage.cpp
        AnimReportPage.cpp
        AnimatedSoundOptionsDialog.cpp
        AnimationPropPage.cpp
        AnimationSpeed.cpp
        AssetInfo.cpp
        AssetPropertySheet.cpp
        BackgroundBMPDialog.cpp
        BackgroundColorDialog.cpp
        BackgroundObjectDialog.cpp
        BoneMgrDialog.cpp
        CameraDistanceDialog.cpp
        CameraSettingsDialog.cpp
        ColorBar.cpp
        ColorPicker.cpp
        ColorPickerDialogClass.cpp
        ColorSelectionDialog.cpp
        ColorUtils.cpp
        DataTreeView.cpp
        DeviceSelectionDialog.cpp
        DialogToolbar.cpp
        DirectoryDialog.cpp
        EditLODDialog.cpp
        EmitterColorPropPage.cpp
        EmitterFramePropPage.cpp
        EmitterGeneralPropPage.cpp
        EmitterInstanceList.cpp
        EmitterLineGroupPropPage.cpp
        EmitterLinePropPage.cpp
        EmitterParticlePropPage.cpp
        EmitterPhysicsPropPage.cpp
        EmitterPropertySheet.cpp
        EmitterRotationPropPage.cpp
        EmitterSizePropPage.cpp
        EmitterUserPropPage.cpp
        GammaDialog.cpp
        Globals.cpp
        GraphicView.cpp
        HierarchyPropPage.cpp
        MainFrm.cpp
        MeshPropPage.cpp
        OpacitySettingsDialog.cpp
        OpacityVectorDialog.cpp
        ParticleBlurTimeKeyDialog.cpp
        ParticleFrameKeyDialog.cpp
        ParticleRotationKeyDialog.cpp
        ParticleSizeDialog.cpp
        PlaySoundDialog.cpp
        ResolutionDialog.cpp
        RestrictedFileDialog.cpp
        RingColorPropPage.cpp
        RingGeneralPropPage.cpp
        RingPropertySheet.cpp
        RingSizePropPage.cpp
        SaveSettingsDialog.cpp
        ScaleDialog.cpp
        SceneLightDialog.cpp
        ScreenCursor.cpp
        SoundEditDialog.cpp
        SphereColorPropPage.cpp
        SphereGeneralPropPage.cpp
        SpherePropertySheet.cpp
        SphereSizePropPage.cpp
        #SphereUtils.cpp
        StdAfx.cpp
        TextureMgrDialog.cpp
        TexturePathDialog.cpp
        TextureSettingsDialog.cpp
        Toolbar.cpp
        Utils.cpp
        Vector3RndCombo.cpp
        ViewerAssetMgr.cpp
        ViewerScene.cpp
        VolumeRandomDialog.cpp
        W3DView.cpp
        W3DViewDoc.cpp
        W3DViewView.cpp
)

add_executable(W3DView WIN32 ${SOURCES} W3DView.rc)
target_include_directories(W3DView
        PRIVATE
        ${MSS_INCLUDE_DIRS}
)
target_link_libraries(W3DView
        PRIVATE
        WW3D2
        WWAudio
        WWDebug
        WWLib
        Microsoft::D3DX9
        ${MSS_LIBRARIES}
        version
)
set_target_properties(W3DView PROPERTIES
    MFC_FLAG 1
)
